Fix tab wrapping and adjust some sizing - window should be able to become much more narrow before the rendering breaks (down to around 840px)

--- a/src/components/app.sass
+++ b/src/components/app.sass
@@ -62,7 +62,7 @@
 
         &.chart-table
           display: grid
-          grid-template-rows: 28px 300px auto
+          grid-template-rows: 28px 290px auto
           flex: 1 1 auto
 
           .subsection
