--- a/src/components/controls/data-controls.sass
+++ b/src/components/controls/data-controls.sass
@@ -2,7 +2,7 @@
 
 .data-analysis-type
   width: 100%
-  height: 22px
+  height: 23px
   text-align: center
   border-bottom: 2px solid silver
 
